[package]
name = "tokio-udp-receiver-benchmark"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"

[dependencies]
tokio = { git = "https://github.com/fengalin/tokio", branch = "fengalin/0.2.5-throttling", features = ["net", "io-driver", "rt-core", "rt-threaded", "time"] }
futures = "0.3"
